src/test/contracts/negative/linearity_record_pattern.mligo
type foofoo = {foo : int; bar : int}

let y (x:foofoo) = match x with { foo ; foo ; bar } -> foo + bar